Code clean up and update swagger document
